cicd-admin/Service_cicd-admin_jenkins.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
    service.alpha.openshift.io/dependencies: '[{"name": "jenkins-jnlp", "namespace":
      "", "kind": "Service"}]'
    service.openshift.io/infrastructure: "true"
  labels:
    app: jenkins-ephemeral
    template: jenkins-ephemeral-template
  name: jenkins
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    name: jenkins
  sessionAffinity: None
  type: ClusterIP
