cicd-admin/Service_cicd-admin_nexus.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: nexus
    template: nexus3-persistent-template
  name: nexus
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8081-tcp
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    deploymentconfig: nexus
  sessionAffinity: None
  type: ClusterIP
