cicd-admin/Route_cicd-admin_gogs.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: gogs
  name: gogs
spec:
  to:
    kind: Service
    name: gogs
    weight: 100
  wildcardPolicy: None
