cicd-admin/Route_cicd-admin_nexus.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
    openshift.io/host.generated: "true"
  labels:
    app: nexus
    template: nexus3-persistent-template
  name: nexus
spec:
  port:
    targetPort: 8081-tcp
  to:
    kind: Service
    name: nexus
    weight: 100
  wildcardPolicy: None
